commit wip almost done prototype
To do:
- form & google docs integration
- aesthetics

--- a/Codementor_Website/index.html
+++ b/Codementor_Website/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0060)http://blackrockdigital.github.io/startbootstrap-freelancer/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en" xmlns="http://www.w3.org/1999/html"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>my theme here</title>
+    <title>Codementor: Home</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="./index_files/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,6 @@
     <!-- Custom Fonts -->
     <link href="./index_files/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="./index_files/css" rel="stylesheet" type="text/css">
-    <link href="./index_files/css(1)" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -27,6 +26,8 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <script src="https://use.fontawesome.com/ee8ffd2ca2.js"></script>
 
 <style type="text/css"></style></head>
 
@@ -53,7 +54,7 @@
 
 
     <!-- Tech Bootcamp middle section, copied from robogals :P -->
-    <section id="portfolio" class="portfolio bg-primary blue">
+    <section id="bootcamp" class="bootcamp">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
@@ -89,6 +90,7 @@
                 </div>
                 <!-- /.row -->
             </div>
+        </div>
             <!-- /.container -->
     </section>
 
@@ -129,39 +131,109 @@
         <!-- /.container -->
     </section>
 
+    <!-- What's in it for me -->
+    <section id="whatget" class="whatget">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <h2>What do I get out of it?</h2>
+                    <hr class ="small">
+                    <div class="row">
+
+                        <div class="col-md-4">
+                            <div class="portfolio-item">
+                                <img class="circular img-responsive" src="./index_files/added/networking_placeholder.jpg">
+                                Network with fellow students and<br>
+                                industry experts. We'll hold sessions<br>
+                                in different workplaces weekly<br>
+                                Bonus: free food!
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="portfolio-item">
+                                <img class="circular img-responsive" src="./index_files/added/yourexp_placeholder.png">
+                                Well rounded experience on shipping<br>
+                                a product. You will gain skills that<br>
+                                could be useful later down the track!
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="portfolio-item">
+                                <img class="circular img-responsive" src="./index_files/added/startup_placeholder.jpg">
+                                Your very own project and team.<br>
+                                A product you can be proud of.<br>
+                                Will you be the next hot<br>
+                                start up in town?
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+    </section>
     <!-- Footer -->
     <footer class="text-center">
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
-                        <ul class="list-inline">
-                            <li>
-                                <a href="http://blackrockdigital.github.io/startbootstrap-freelancer/#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="http://blackrockdigital.github.io/startbootstrap-freelancer/#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
-                            </li>
-                            <li>
-                                <a href="http://blackrockdigital.github.io/startbootstrap-freelancer/#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="http://blackrockdigital.github.io/startbootstrap-freelancer/#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="http://blackrockdigital.github.io/startbootstrap-freelancer/#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                    <h4>Brought to you by a collaboration between...</h4>
+
+                    <div class="footer-col col-md-6">
+                        <h4>Robogals Monash</h4>
+                        <a href="http://robogalsmonash.org/">
+                        <img class="clubs img-responsive" src="./index_files/added/robogals.png"></a>
+                        Building 72<br>
+                        14 Alliance Lane<br>
+                        Monash University, VIC 3800<br>
+                        Melbourne, Australia
+                        <ul class="list-unstyled">
+                            <!-- <li><i class="fa fa-phone fa-fw"></i> +61 </li> -->
+                            <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:monash.exec@robogals.org" style="color:#0091cc">monash.exec@robogals.org</a>
                             </li>
                         </ul>
+                        <br>
+                        <ul class="list-inline">
+                            <li>
+                                <a href="https://www.facebook.com/robogalsmonash/" style="color:#ffffff"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/robogalsmonash/" style="color:#ffffff"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            </li>
+                        </ul>
+
                     </div>
-                    <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.</p>
+
+                    <div class="footer-col col-md-6">
+                        <h4>Wired Monash</h4>
+                        <a href="http://wired.org.au/">
+                        <img class="clubs img-responsive" src="./index_files/added/wired.png"></a>
+                        Building ?<br>
+                        21 Chancellors Walk<br>
+                        Monash University, VIC 3800<br>
+                        Melbourne, Australia
+                        <ul class="list-unstyled">
+                            <!-- <li><i class="fa fa-phone fa-fw"></i> +61 </li> -->
+                            <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:wired@monashclubs.org" style="color:#0091cc">wired@monashclubs.org</a>
+                            </li>
+                        </ul>
+                        <br>
+                        <ul class="list-inline">
+                            <li>
+                                <a href="http://facebook.com/WiredMonash" style="color:#ffffff"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/WiredMonash" style="color:#ffffff"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            </li>
+                        </ul>
+
                     </div>
+
+
                 </div>
             </div>
         </div>
