updated for mobile devices
text now smaller and more readable for mobile devices…i hope ? :S

--- a/Codementor_Website/index.html
+++ b/Codementor_Website/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+
+
     <title>Codementor: Home</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
@@ -43,9 +45,11 @@
                 <div class="intro-text">
                     <span class="name">Ready to build something awesome?</span>
                     <hr class="star-light">
-                        <span class="briefintro">You are hungry. You want to do something great.
+                    <div class="intro-para">
+                        You are hungry. You want to do something great.
                             <br>You want to learn and you want to make it happen.
-                            <br>Don't fret. The Monash Tech Bootcamp is here</span>
+                            <br>Don't fret. The Monash Tech Bootcamp is here
+                        </div>
                 </div>
             </div>
         </div>
