edited humans of mtb for mobile
updated
- humans of mtb for mobile
- added up to footer
need to do
- footer
- form fuc

--- a/Codementor_v2/index.html
+++ b/Codementor_v2/index.html
@@ -37,6 +37,7 @@
 
 
 <!-- Header -->
+<section>
 <header>
         <div class="row">
             <div class="col-lg-12">
@@ -57,6 +58,7 @@
             </div>
         </div>
 </header>
+</section>
 
 <!-- Tech Bootcamp, white -->
 <section id="bootcamp_info" class="white">
@@ -66,7 +68,7 @@
                 <h2>The Monash Tech Bootcamp</h2><br>
                 <div class="secondary_text">
                 The Monash Tech Bootcamp is a 7-week training program designed to help<br>
-                students build well roudned technology services.
+                students build well rounded technology services.<br>
                 </div><br>
                 <!-- write.svg -->
                 <div class="tertiary_text">
@@ -77,7 +79,7 @@
                         <div class="col-lg-6 " >
                             <div class="tertiary_text text-left">
                                 <br>We put you on a project team with other students who<br>
-                                come from a different specialisation.
+                                come from a different specialisation.<br>
                             </div><br>
                         </div>
 
@@ -92,7 +94,7 @@
                         <div class="col-lg-6 " >
                             <div class="tertiary_text text-left">
                                 <br>You'll be given well-rounded business, user experience and<br>
-                                web development training to improve your projects
+                                web development training to improve your projects<br>
                             </div><br>
                         </div>
                     </div>
@@ -116,201 +118,203 @@
     </div>
 </section>
 
-<!-- Humans of MTB -->
+<!-- Humans of MTB, yellow -->
 <section id="humans_MBT" class="yellow">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2>Humans of MTB</h2><br>
             </div>
-            <!-- images -->
-            <div class="row">
-                <div class="col-lg-3 col-sm-offset-1">
-                    <img src="index_files/added/icons_skills.svg">
-                </div>
-                <div class="col-lg-3 col-lg-offset-3"><br><br>
-                    <img src="index_files/added/icons_people.svg">
-                </div>
-            </div>
-            <!-- text subheading -->
-            <div class="row">
-                <div class="col-lg-6 col-sm-offset-0 text-center">
-                    <h3>People with the skills to compliment yours.</h3>
-                </div>
-                <div class="col-lg-6 col-sm-offset-0 text-center">
-                    <h3>Experienced professionals in the industry</h3>
-                </div>
 
-            </div>
-            <!-- text content -->
-            <div class="row">
-                <div class="col-lg-6 col-sm-offset-0">
-                    <div class="tertiary_text text-center">
-                        Budding business, design and code enthusiasts.<br>
-                        Passionate students who want to become better.
+            <div class="col-lg-12">
+                <!-- first column of image (skills), and text -->
+                <div class="col-lg-6">
+                    <div class="col-lg-6 col-lg-offset-2">
+                        <img src="index_files/added/icons_skills.svg">
                     </div>
-                </div>
-                <div class="col-lg-6 col-sm-offset-0">
-                    <div class="tertiary_text text-center">
-                        Senior designers, consultants, development<br>
-                        leads and educators. We’re tapping into<br>
-                        the WIRED & Robogals’ partner network<br>
-                        to bring you the best.
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</section>
-
-<!-- Who's In it -->
-<section id="who" class="who">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-10 col-lg-offset-1 text-center">
-                <h2>Who's In it</h2>
-                <hr class="small">
-                <div class="row">
-
-                    <div class="col-md-6">
-                        <div class="portfolio-item">
-                            <img class="rectangular img-responsive" src="./index_files/added/skills_placeholder.jpg">
-                            <h6>People with skills that compliment yours!</h6>
-                            Budding business, design and <br>
-                            code enthusiasts.
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <h3>People with the skills to compliment yours.</h3>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="portfolio-item">
-                            <img class="rectangular img-responsive" src="./index_files/added/companies_placeholder.png">
-                            <h6>Seasoned veterans in the industry</h6>
-                            Senior designers, consultants, development leads<br>
-                            and educators.
-                        </div>
-                    </div>
-                </div>
-                <!-- /.row (nested) -->
-                <!-- <a href="#" class="btn btn-dark">View More Items</a> -->
-            </div>
-            <!-- /.col-lg-10 -->
-        </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container -->
-</section>
-
-<!-- What's in it for me -->
-<section id="whatget" class="whatget">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-10 col-lg-offset-1 text-center">
-                <h2>What do I get out of it?</h2>
-                <hr class ="small">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="portfolio-item">
-                            <img class="circular img-responsive" src="./index_files/added/networking_placeholder.jpg">
-                            Network with fellow students and<br>
-                            industry experts. We'll hold sessions<br>
-                            in different workplaces weekly<br>
-                            Bonus: free food!
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="portfolio-item">
-                            <img class="circular img-responsive" src="./index_files/added/yourexp_placeholder.png">
-                            Well rounded experience on shipping<br>
-                            a product. You will gain skills that<br>
-                            could be useful later down the track!
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="portfolio-item">
-                            <img class="circular img-responsive" src="./index_files/added/startup_placeholder.jpg">
-                            Your very own project and team.<br>
-                            A product you can be proud of.<br>
-                            Will you be the next hot<br>
-                            start up in town?
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-</section>
-
-<!-- It's free! -->
-<section id="free" class="free">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-10 col-lg-offset-1 text-center">
-                <h2>Oh, and it's free of charge!</h2>
-            </div>
-            <!-- /.col-lg-10 -->
-        </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container -->
-</section>
-
-<!-- form -->
-<section id="express_interest" class="express_interest">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-10 col-lg-offset-1 text-center">
-                <h2>It starts in Week 3, Semester 2.</h2>
-                <h3>Expressions of interest now open.</h3><br>
-
-                <div class="container col-md-offset-2 col-md-7">
-                    <form class="col-lg-offset-2 form-horizontal" role="form" action="test.py" method="post">
-
-                        <div class="form">
-
-                            <div class="test">
-                                <input type="email" class="form-control" id="email" placeholder="Type your email here" name="email">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="tertiary_text text-center">
+                                Budding business, design and code enthusiasts.<br>
+                                Passionate students who want to become better.
                             </div>
-                        <br>
-                        <select class="form-control " id="sel">
+                        </div>
+                    </div>
+                </div>
+                <!-- 2nd column of image (network), and text -->
+                <div class="col-lg-6">
+                    <div class="col-lg-6 col-lg-offset-1"><br><br>
+                        <!-- padding to algin text -->
+                        <img id="img_padding" src="index_files/added/icons_people.svg">
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <h3>Experienced professionals in the industry.</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="tertiary_text text-center">
+                                Senior designers, consultants, development<br> 
+                                leads and educators. We’re tapping into<br> 
+                                the WIRED & Robogals’ partner network<br> 
+                                to bring you the best.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<!-- What do I get out of it, white -->
+<section id="what_good" class="white">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>What do I get out of it?</h2><br><br>
+            </div>
+            <!-- networks -->
+            <div class="col-lg-4 col-lg-offset-0 text-center">
+                <img src="index_files/added/image_networks.png">
+                <h3>Networks</h3>
+                <div class="tertiary_text">
+                    We'll work in different  workplaces.<br>
+                    You'll meet net industry<br>
+                    experts every week.
+                </div><br><br>
+            </div>
+            <!-- exp -->
+            <div class="col-lg-4 col-lg-offset-0 text-center">
+                <img src="index_files/added/image_experience.png">
+                <h3>Well-rounded experience</h3>
+                <div class="tertiary_text">
+                    We're here to give you different skills<br>
+                    that could be useful later on
+                </div><br><br>
+            </div>
+            <!-- project -->
+            <div class="col-lg-3 col-lg-offset-1 text-center">
+                <img src="index_files/added/image_projects.png">
+                <h3>A real project</h3>
+                <div class="tertiary_text">
+                    Your own project and a team.<br>
+                    Great for your portfolio. Could<br>
+                    you be the next hot start up?
+                </div><br>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Program Outline, yellow -->
+<section id="program_outline" class="yellow">
+    <div class="container">
+        <div class="row text-center">
+            <h2>Program Outline</h2><br>
+            <img src="index_files/added/icons_calendar.svg" align="middle"><br><br>
+            <div class="col-lg-6 col-lg-offset-3">
+                <div class="tertiary_text text-left">
+                    9 August 6:30 to 9:00PM - Kickoff and Business workshop<br><br>
+                    16 August 6:30 to 9:00PM - User experience design workshop<br><br>
+                    23 August 6:30 to 9:00PM - Technical workshop<br><br>
+                    30 August 6:30 to 9:00PM - Technical workshop<br><br>
+                    6 September 6:30 to 9:00PM - Technical workshop<br><br>
+                    13 September 6:30 to 9:00PM - Working week<br><br>
+                    20 September 6:30 to 9:00PM - Presentation skills and pitching workshop<br><br>
+                    27 September 6:30 to 9:00PM - Project presentations<br><br>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Free! -->
+<section id="free" class="white">
+    <div class="container">
+        <div class="row text-center">
+            <h2>Oh, and it's free. No HECS needed.</h2>
+        </div><br>
+        <div class="tertiary_text text-center col-sm-offset-1">
+            Expressions of interest for students now open!
+        </div><br>
+        <!-- side margin -->
+        <div class="col-xs-1 col-sm-4">
+        </div>
+        <!-- Form -->
+        <div class="col-xs-10 col-sm-4 text-center">
+                <form class="col-lg-offset-2 form-horizontal" role="form" action="test.py" method="post">
+
+                    <div class="form">
+                        <!-- drop down box 1-->
+                        <select class="form-control" id="sel_drop_skill">
                             <option>What will you bring to the table?</option>
-                            <option>Tech skills</option>
-                            <option>Business skills</option>
-                            <option>Visual skills</option>
+                            <option>Technical skills</option>
+                            <option>Business prowess</option>
+                            <option>Visual design know how</option>
+                            <option>Marketing flair</option>
                         </select>
                         <br>
-
-                            <div id="button" class="col-md-offset-3 col-md-4">
-                                <button type="submit" class="btn btn-default">Keep me updated</button>
-                            </div>
+                        <!-- drop down box 2-->
+                        <select class="form-control" id="sel_drop_attend">
+                            <option>I am able to attend...</option>
+                            <option>All of the workshops!</option>
+                            <option>Most of the workshops</option>
+                            <option>None of the workshops</option>
+                        </select>
+                        <br>
+                        <!-- box for email -->
+                        <div class="get_email">
+                            <input type="email" class="form-control" id="email" placeholder="Type your email here" name="email">
                         </div>
+                        <br>
 
                         <div class="row">
-                            <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Send</button>
-                            </div>
+                            <div class="form-group col-xs-10">
+                            <button type="submit" class="btn btn-success btn-lg center-block">Keep me updated!</button>
                         </div>
-
+                        </div>
+                    </div>
                 </form>
-                </div>
-
-
             </div>
-                <!-- /.row (nested) -->
-                <!-- <a href="#" class="btn btn-dark">View More Items</a> -->
-            </div>
-            <!-- /.col-lg-10 -->
+
         </div>
-        <!-- /.row -->
+        <!-- side margin -->
+        <div class="col-xs-1 col-sm-4">
+        </div>
+
     </div>
-    <!-- /.container -->
 </section>
 
 <!-- Contact -->
 <!-- Footer -->
+<!--
+<section>
+    <footer id="footer" class="grey">
+        <div class="footer-col col-lg-12">
+            <div class="quaternary_text">
+                Brought to you by<br>
+            </div>
+            <div class="col-lg-5">
+                <img src="index_files/added/wired.png">
+            </div>
+            <div class="col-lg-1">
+                <img src="index_files/added">
+            </div>
+            <div class="col-lg-5">
+                <img src="index_files/added/robogals.png">
+            </div>
+        </div>
+    </footer>
+</section>
+-->
 <footer class="text-center">
     <div class="footer-above">
         <div class="container">
