update link colours
update link colours

--- a/Codementor_formless/index.html
+++ b/Codementor_formless/index.html
@@ -37,7 +37,6 @@
 
 
 <!-- Header -->
-<section>
 <header>
         <div class="row">
             <div class="col-lg-12">
@@ -58,7 +57,6 @@
             </div>
         </div>
 </header>
-</section>
 
 <!-- Tech Bootcamp, white -->
 <section id="bootcamp_info" class="white">
@@ -249,7 +247,7 @@
             <h2>Oh, and it's free. No HECS needed.</h2>
         </div><br>
         <div class="tertiary_text text-center" id ="linking">
-            <a href="http://goo.gl/forms/pOcZAWsnSrifjBO83">Expressions of interest for students now open!</a>
+            <a href="http://goo.gl/forms/pOcZAWsnSrifjBO83">Expressions of interest for students now open! [Click me]</a>
         </div>
 
     </div>
@@ -273,16 +271,16 @@
                     Melbourne, Australia
                     <ul class="list-unstyled">
                         <!-- <li><i class="fa fa-phone fa-fw"></i> +61 </li> -->
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:monash.exec@robogals.org" style="color:#0091cc">monash.exec@robogals.org</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:monash.exec@robogals.org" style="color:#353535">monash.exec@robogals.org</a>
                         </li>
                     </ul>
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="https://www.facebook.com/robogalsmonash/" style="color:#ffffff"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            <a href="https://www.facebook.com/robogalsmonash/" style="color:cornflowerblue"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/robogalsmonash/" style="color:#ffffff"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            <a href="https://twitter.com/robogalsmonash/" style="color:cornflowerblue;"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
 
@@ -298,16 +296,16 @@
                     Melbourne, Australia
                     <ul class="list-unstyled">
                         <!-- <li><i class="fa fa-phone fa-fw"></i> +61 </li> -->
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:wired@monashclubs.org" style="color:#0091cc">wired@monashclubs.org</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:wired@monashclubs.org" style="color:#353535">wired@monashclubs.org</a>
                         </li>
                     </ul>
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="http://facebook.com/WiredMonash" style="color:#ffffff"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            <a href="http://facebook.com/WiredMonash" style="color:purple"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/WiredMonash" style="color:#ffffff"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            <a href="https://twitter.com/WiredMonash" style="color:purple"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
 
@@ -325,7 +323,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Copyright © WiredxRobogals 2016
+                    Copyright © Wired x Robogals 2016
                 </div>
             </div>
         </div>
